# noplacelike.rs

./: Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  server.rs
src/routes/: admin.rs  api.rs  mod.rs  streaming.rs  ui.rs  ws.rs
src/services/: audio.rs  clipboard.rs  files.rs  mod.rs
src/templates/: mod.rs
templates/: admin.html  home.html
